# fake-io

./: .gitignore  .travis.yml  LICENSE  README.md  fake-io.cabal
src/System/: FakeIO.hs
test/: qc.hs
