name:                fake-io
version:             0.2.1.4
synopsis:            Fake IO
description:         Implementation of fake and pure IO monad for educational and testing purposes.
license:             BSD3
license-file:        LICENSE
author:              Chris Done, Vladimír Štill
maintainer:          hs-fake-io@vstill.eu
copyright:           2014 Chris Done, 2019 Vladimír Štill
category:            Development, Education
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   System.FakeIO
  build-depends:     base >= 4.10 && <5,
                     safe,
                     mtl,
                     containers
